[project]
name = "langraph-rag-api"
version = "0.1.0"
description = "A toy RAG API built with FastAPI, LangChain, LangGraph, llama.cpp and Elasticsearch"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.31",
    "easyocr>=1.7.2",
    "elasticsearch>=8.17",
    "fastapi[standard]>=0.115,<0.116",
    "langchain>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-elasticsearch>=0.3",
    "langchain-openai>=0.3,<0.4",
    "langfuse>=2,<3",
    "langgraph>=0.2,<0.3",
    "python-multipart>=0.0.0,<1",
    "redis>=7.1.1",
    "streamlit>=1.54.0",
    "uvicorn[standard]>=0.34,<0.35",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mypy>=1.14",
    "ruff>=0.9",
    "types-redis>=4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "e2e: end-to-end evaluation tests requiring live LLM, embedding, and Redis servers",
]
filterwarnings = [
    "ignore::langchain_core._api.deprecation.LangChainDeprecationWarning",
    "ignore:Accessing the 'model_fields':pydantic.warnings.PydanticDeprecatedSince211",
]

# ── Ruff (linting + formatting) ──────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "SIM108", # ternary operator — readability preference
    "RUF001", # ambiguous unicode in strings — intentional (bilingual KR/EN content)
    "RUF002", # ambiguous unicode in docstrings — intentional
    "RUF003", # ambiguous unicode in comments — intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "B018",   # useless expression (common in test assertions)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Mypy (static type checking) ──────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_core.*",
    "langchain_community.*",
    "langchain_openai.*",
    "langchain_elasticsearch.*",
    "langgraph.*",
    "langfuse.*",
    "docling.*",
    "docling_core.*",
    "elasticsearch.*",
    "streamlit.*",
]
ignore_missing_imports = true
